--- a/fim_auth/api/etc/auth.yaml
+++ b/fim_auth/api/etc/auth.yaml
@@ -1,3 +1,13 @@
 Name: auth
 Host: 0.0.0.0
 Port: 8888
+Mysql:
+  DbSource: "root:12345678@tcp(127.0.0.1:33069)/fim_server_db?charset=utf8mb4&parseTime=true"
+Auth:
+  AccessSecret: dfff1234
+  AccessExpire: 3600
+Log:
+  ServiceName: auth
+  Encoding: plain
+  Stat: false
+  TimeFormat: 2006-01-02 15:04:05
